# qt_auto_translation

./: .gitignore  CMakeLists.txt  README.md  auto_translator_cfg.json  language_de_DE.ts  language_en_US.ts  language_fr_FR.ts  language_tr_TR.ts  main.cpp
translation/: CMakeLists.txt  translation.cpp  translation.h
translatorGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
